[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
config = "0.13"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.18.1", features = ["v4"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.0"
once_cell = "1.0.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
unicode-segmentation = "1.10"
validator = "0.14"
fake = "~2.3"
claim = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"

name = "zero2prod"